<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionHome"
        android:enabled="true"
        android:icon="@drawable/ic_share"
        app:iconTint="@android:color/white"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionSearch"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="never" />
   <item
        android:id="@+id/actionPhotos"
        android:enabled="true"
        android:icon="@drawable/ic_photo"
       android:title="@string/photo"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionMessages"
        android:enabled="true"
        android:icon="@drawable/ic_message"
        android:title="@string/messages"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionProfile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="never" />

</menu>